Use monospace font for email

--- a/homework.tex
+++ b/homework.tex
@@ -8,7 +8,7 @@
 \begin{document}
 
 \title{Sample Homework}
-\author{John Doe\\\textit{johnd@example.com}}
+\author{John Doe \\ \texttt{johnd@example.com}}
 \maketitle
 
 \section*{Problem 1.}
