--- a/homework.tex
+++ b/homework.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,11pt]{article}
 
 \usepackage{amsmath,amsthm,amssymb}
+\usepackage{enumitem}
 \usepackage{url}
 \usepackage{listings}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
@@ -36,17 +37,17 @@ Center equations.
 
 \section*{Problem 2.}
 
-\subsection*{(a)}
+\subsection*{2.1}
 
 This problem can be solved in this way.
 
-\subsection*{(b)}
+\subsection*{2.2}
 
 This problem can be solved in that way.
 
 \section*{Problem 3.}
 
-\begin{enumerate}
+\begin{enumerate}[label=(\alph*)]
   \item First
 
   \item Second
