--- a/homework.tex
+++ b/homework.tex
@@ -3,8 +3,10 @@
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage{enumitem}
 \usepackage{url}
-\usepackage{listings}
+\usepackage{color,fancyvrb}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
+
+\input{code/fmt}
 
 \begin{document}
 
