--- a/homework.tex
+++ b/homework.tex
@@ -3,7 +3,10 @@
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage{enumitem}
 \usepackage{url}
+\usepackage{ellipsis}
+\usepackage{upquote}
 \usepackage{color,fancyvrb}
+\usepackage{spverbatim}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
 \input{code/fmt}
