--- a/homework.tex
+++ b/homework.tex
@@ -5,11 +5,12 @@
 \usepackage{url}
 \usepackage{ellipsis}
 \usepackage{upquote}
-\usepackage{color,fancyvrb}
-\usepackage{spverbatim}
+\usepackage{minted}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
-\input{code/fmt}
+\setminted{breaklines}
+\setmintedinline{breaklines}
+\newcommand\code{\mintinline{text}}
 
 \begin{document}
 
@@ -39,6 +40,17 @@ Center equations.
   x^2 + x + 1 \\
   x + 1
 \end{gather*}
+
+Inline code: \code{puts "Hi"} or \code|printf("%s\n", "Hello, world!");|
+
+Embed code:
+\begin{minted}{c}
+#include <stdio.h>
+int main() {
+    printf("Hello, world!\n");
+    return 0;
+}
+\end{minted}
 
 \section*{Problem 2.}
 
