Define \code with \newmintinline

--- a/homework.tex
+++ b/homework.tex
@@ -10,7 +10,7 @@
 
 \setminted{breaklines}
 \setmintedinline{breaklines}
-\newcommand\code{\mintinline{text}}
+\newmintinline[code]{text}{}
 
 \begin{document}
 
