--- a/homework.tex
+++ b/homework.tex
@@ -5,9 +5,10 @@
 \usepackage{url}
 \usepackage{ellipsis}
 \usepackage{upquote}
-\usepackage{minted}
+\usepackage{fancyvrb,minted}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
+\fvset{breaklines}
 \setminted{breaklines}
 \setmintedinline{breaklines}
 \newmintinline[code]{text}{}
