--- a/homework.tex
+++ b/homework.tex
@@ -6,6 +6,7 @@
 \usepackage{ellipsis}
 \usepackage{upquote}
 \usepackage{fancyvrb,minted}
+\usepackage{graphicx}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
 \fvset{breaklines}
