--- a/homework.tex
+++ b/homework.tex
@@ -7,6 +7,7 @@
 \usepackage{upquote}
 \usepackage{fancyvrb,minted}
 \usepackage{graphicx}
+\usepackage{hyperref}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
 \fvset{breaklines}
