Use lmodern package for monospace font

--- a/homework.tex
+++ b/homework.tex
@@ -5,6 +5,7 @@
 \usepackage{url}
 \usepackage{ellipsis}
 \usepackage{upquote}
+\usepackage{lmodern}
 \usepackage{fancyvrb,minted}
 \usepackage{graphicx}
 \usepackage{hyperref}
