--- a/homework.tex
+++ b/homework.tex
@@ -6,7 +6,7 @@
 \usepackage{ellipsis}
 \usepackage{upquote}
 \usepackage{lmodern}
-\usepackage{fancyvrb,minted}
+\usepackage{textcomp,fancyvrb,minted}
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
