--- a/homework.tex
+++ b/homework.tex
@@ -9,6 +9,7 @@
 \usepackage{textcomp,fancyvrb,minted}
 \usepackage{booktabs}
 \usepackage{graphicx}
+\usepackage{adjustbox}
 \usepackage{hyperref}
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
