Use array package for column styling

--- a/homework.tex
+++ b/homework.tex
@@ -7,7 +7,7 @@
 \usepackage{upquote}
 \usepackage{lmodern}
 \usepackage{textcomp,fancyvrb,minted}
-\usepackage{booktabs}
+\usepackage{array,booktabs}
 \usepackage{graphicx}
 \usepackage{adjustbox}
 \usepackage{hyperref}
